remove contrast issues

--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -10,6 +10,7 @@ header, nav, #hero, main, footer {
 #logo {
     margin-left: .5rem;
     margin-top: .5rem;
+    width:200px;
 }
 
 
@@ -63,6 +64,7 @@ header {
     padding: 0;
     margin: 0;
     position: relative;
+
 }
 
 .navigation li {
@@ -101,7 +103,7 @@ header {
    position: relative;
    overflow: hidden;
    min-height: 650px;
-   background-color: black;
+   background-color: rgb(33, 32, 31);
 }
 
 #hero-img {
@@ -109,6 +111,8 @@ header {
     object-fit: cover;
     min-height: 650px;
     opacity: 90%;
+    margin-top: -100px;
+    margin-bottom: -105px;
 }
 
 #hero-box:hover {
@@ -175,6 +179,11 @@ header {
     padding: 1rem;
     text-align: center;
     font-weight: 400;
+}
+
+#weather {
+    margin-top: 50px;
+    background-color: white;
 }
 
 #contact-home {
